remove decode response flag; protected mode off.

--- a/microdrop_utils/redis.conf
+++ b/microdrop_utils/redis.conf
@@ -4,4 +4,5 @@ save ""
 # Disable AOF (Append-Only File)
 appendonly no
 
-bind 127.0.0.1 192.168.8.186
+protected-mode no
+#bind 127.0.0.1 192.168.8.186
